syntax = "proto3";

option objc_class_prefix = "HLW";

package samplehelloworld;

// The greeting service definition.
service Greeter {
  //   Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// 包含用户名的请求消息。
message HelloRequest {
  string name = 1;
}

// 包含问候语的响应消息
message HelloReply {
  string message = 1;
}